--- a/PyLearn7-Assignment23/main_window.ui
+++ b/PyLearn7-Assignment23/main_window.ui
@@ -10,6 +10,24 @@
     <height>541</height>
    </rect>
   </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>501</width>
+    <height>541</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>501</width>
+    <height>541</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Sudoku Game</string>
   </property>
