--- a/PyLearn7-Assignment25/mainwindow.ui
+++ b/PyLearn7-Assignment25/mainwindow.ui
@@ -96,6 +96,56 @@
      <attribute name="title">
       <string>Alarm</string>
      </attribute>
+     <widget class="QPushButton" name="btn_add_alarm">
+      <property name="geometry">
+       <rect>
+        <x>240</x>
+        <y>230</y>
+        <width>75</width>
+        <height>24</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Add Alarm</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="tbx_new_alarm_name">
+      <property name="geometry">
+       <rect>
+        <x>210</x>
+        <y>180</y>
+        <width>141</width>
+        <height>31</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QTimeEdit" name="bx_time">
+      <property name="geometry">
+       <rect>
+        <x>180</x>
+        <y>120</y>
+        <width>221</width>
+        <height>51</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Seven Segment</family>
+        <pointsize>25</pointsize>
+       </font>
+      </property>
+     </widget>
+     <widget class="QWidget" name="layoutWidget">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>20</y>
+        <width>511</width>
+        <height>61</height>
+       </rect>
+      </property>
+      <layout class="QGridLayout" name="layout_alarms"/>
+     </widget>
     </widget>
     <widget class="QWidget" name="tab_3">
      <attribute name="title">
