--- a/PyLearn7-Assignment25/mainwindow.ui
+++ b/PyLearn7-Assignment25/mainwindow.ui
@@ -134,6 +134,9 @@
         <pointsize>25</pointsize>
        </font>
       </property>
+      <property name="displayFormat">
+       <string>hh:mm:ss</string>
+      </property>
      </widget>
      <widget class="QWidget" name="layoutWidget">
       <property name="geometry">
