--- a/PyLearn7-Assignment25/mainwindow.ui
+++ b/PyLearn7-Assignment25/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>664</width>
-    <height>540</height>
+    <width>650</width>
+    <height>521</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -18,13 +18,16 @@
     <property name="geometry">
      <rect>
       <x>50</x>
-      <y>20</y>
+      <y>10</y>
       <width>551</width>
       <height>461</height>
      </rect>
     </property>
+    <property name="autoFillBackground">
+     <bool>false</bool>
+    </property>
     <property name="currentIndex">
-     <number>1</number>
+     <number>0</number>
     </property>
     <widget class="QWidget" name="tab">
      <attribute name="title">
@@ -342,7 +345,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>664</width>
+     <width>650</width>
      <height>22</height>
     </rect>
    </property>
