--- a/PyLearn7-Assignment25/mainwindow.ui
+++ b/PyLearn7-Assignment25/mainwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>650</width>
+    <width>610</width>
     <height>521</height>
    </rect>
   </property>
@@ -17,7 +17,7 @@
    <widget class="QTabWidget" name="tabWidget">
     <property name="geometry">
      <rect>
-      <x>50</x>
+      <x>30</x>
       <y>10</y>
       <width>551</width>
       <height>461</height>
@@ -27,7 +27,7 @@
      <bool>false</bool>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>1</number>
     </property>
     <widget class="QWidget" name="tab">
      <attribute name="title">
@@ -36,11 +36,16 @@
      <widget class="QPushButton" name="btn_germany_worldclock">
       <property name="geometry">
        <rect>
-        <x>230</x>
-        <y>250</y>
-        <width>75</width>
-        <height>24</height>
+        <x>220</x>
+        <y>230</y>
+        <width>91</width>
+        <height>31</height>
        </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>12</pointsize>
+       </font>
       </property>
       <property name="text">
        <string>Germany</string>
@@ -50,10 +55,15 @@
       <property name="geometry">
        <rect>
         <x>320</x>
-        <y>250</y>
-        <width>75</width>
-        <height>24</height>
+        <y>230</y>
+        <width>91</width>
+        <height>31</height>
        </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>12</pointsize>
+       </font>
       </property>
       <property name="text">
        <string>USA</string>
@@ -62,11 +72,16 @@
      <widget class="QPushButton" name="btn_iran_worldclock">
       <property name="geometry">
        <rect>
-        <x>130</x>
-        <y>250</y>
-        <width>75</width>
-        <height>24</height>
+        <x>120</x>
+        <y>230</y>
+        <width>91</width>
+        <height>31</height>
        </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>12</pointsize>
+       </font>
       </property>
       <property name="text">
        <string>Iran</string>
@@ -84,7 +99,7 @@
       <property name="font">
        <font>
         <family>Seven Segment</family>
-        <pointsize>50</pointsize>
+        <pointsize>56</pointsize>
        </font>
       </property>
       <property name="text">
@@ -102,11 +117,16 @@
      <widget class="QPushButton" name="btn_add_alarm">
       <property name="geometry">
        <rect>
-        <x>230</x>
-        <y>310</y>
-        <width>75</width>
-        <height>24</height>
+        <x>200</x>
+        <y>370</y>
+        <width>141</width>
+        <height>31</height>
        </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>12</pointsize>
+       </font>
       </property>
       <property name="text">
        <string>Add Alarm</string>
@@ -115,9 +135,9 @@
      <widget class="QLineEdit" name="tbx_new_alarm_name">
       <property name="geometry">
        <rect>
-        <x>200</x>
-        <y>260</y>
-        <width>141</width>
+        <x>150</x>
+        <y>320</y>
+        <width>241</width>
         <height>31</height>
        </rect>
       </property>
@@ -131,10 +151,10 @@
      <widget class="QTimeEdit" name="bx_time">
       <property name="geometry">
        <rect>
-        <x>170</x>
-        <y>200</y>
-        <width>221</width>
-        <height>51</height>
+        <x>150</x>
+        <y>220</y>
+        <width>241</width>
+        <height>61</height>
        </rect>
       </property>
       <property name="font">
@@ -161,6 +181,24 @@
       </property>
       <layout class="QGridLayout" name="layout_alarms"/>
      </widget>
+     <widget class="QLabel" name="label">
+      <property name="geometry">
+       <rect>
+        <x>150</x>
+        <y>290</y>
+        <width>91</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>12</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Alarm Name:</string>
+      </property>
+     </widget>
     </widget>
     <widget class="QWidget" name="tab_3">
      <attribute name="title">
@@ -169,10 +207,91 @@
      <widget class="QLabel" name="lbl_stopwatch">
       <property name="geometry">
        <rect>
-        <x>160</x>
+        <x>150</x>
         <y>90</y>
         <width>231</width>
         <height>71</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Seven Segment</family>
+        <pointsize>56</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>0</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="btn_start_stopwatch">
+      <property name="geometry">
+       <rect>
+        <x>120</x>
+        <y>230</y>
+        <width>91</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>12</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Start</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="btn_stop_stopwatch">
+      <property name="geometry">
+       <rect>
+        <x>220</x>
+        <y>230</y>
+        <width>91</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>12</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Stop</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="btn_reset_stopwatch">
+      <property name="geometry">
+       <rect>
+        <x>320</x>
+        <y>230</y>
+        <width>91</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>12</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Reset</string>
+      </property>
+     </widget>
+    </widget>
+    <widget class="QWidget" name="tab_4">
+     <attribute name="title">
+      <string>Timer</string>
+     </attribute>
+     <widget class="QLineEdit" name="tbx_hour_timer">
+      <property name="geometry">
+       <rect>
+        <x>110</x>
+        <y>110</y>
+        <width>90</width>
+        <height>90</height>
        </rect>
       </property>
       <property name="font">
@@ -188,85 +307,19 @@
        <set>Qt::AlignCenter</set>
       </property>
      </widget>
-     <widget class="QPushButton" name="btn_start_stopwatch">
-      <property name="geometry">
-       <rect>
-        <x>140</x>
-        <y>250</y>
-        <width>75</width>
-        <height>24</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Start</string>
-      </property>
-     </widget>
-     <widget class="QPushButton" name="btn_stop_stopwatch">
-      <property name="geometry">
-       <rect>
-        <x>240</x>
-        <y>250</y>
-        <width>75</width>
-        <height>24</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Stop</string>
-      </property>
-     </widget>
-     <widget class="QPushButton" name="btn_reset_stopwatch">
-      <property name="geometry">
-       <rect>
-        <x>330</x>
-        <y>250</y>
-        <width>75</width>
-        <height>24</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Reset</string>
-      </property>
-     </widget>
-    </widget>
-    <widget class="QWidget" name="tab_4">
-     <attribute name="title">
-      <string>Timer</string>
-     </attribute>
-     <widget class="QLineEdit" name="tbx_hour_timer">
-      <property name="geometry">
-       <rect>
-        <x>170</x>
-        <y>90</y>
-        <width>61</width>
-        <height>71</height>
-       </rect>
-      </property>
-      <property name="font">
-       <font>
-        <family>Seven Segment</family>
-        <pointsize>30</pointsize>
-       </font>
-      </property>
-      <property name="text">
-       <string>0</string>
-      </property>
-      <property name="alignment">
-       <set>Qt::AlignCenter</set>
-      </property>
-     </widget>
      <widget class="QLineEdit" name="tbx_minute_timer">
       <property name="geometry">
        <rect>
-        <x>240</x>
-        <y>90</y>
-        <width>61</width>
-        <height>71</height>
+        <x>220</x>
+        <y>110</y>
+        <width>90</width>
+        <height>90</height>
        </rect>
       </property>
       <property name="font">
        <font>
         <family>Seven Segment</family>
-        <pointsize>30</pointsize>
+        <pointsize>50</pointsize>
        </font>
       </property>
       <property name="text">
@@ -279,16 +332,16 @@
      <widget class="QLineEdit" name="tbx_second_timer">
       <property name="geometry">
        <rect>
-        <x>310</x>
-        <y>90</y>
-        <width>61</width>
-        <height>71</height>
+        <x>330</x>
+        <y>110</y>
+        <width>90</width>
+        <height>90</height>
        </rect>
       </property>
       <property name="font">
        <font>
         <family>Seven Segment</family>
-        <pointsize>30</pointsize>
+        <pointsize>50</pointsize>
        </font>
       </property>
       <property name="text">
@@ -301,11 +354,16 @@
      <widget class="QPushButton" name="btn_reset_timer">
       <property name="geometry">
        <rect>
-        <x>330</x>
-        <y>210</y>
-        <width>75</width>
-        <height>24</height>
+        <x>320</x>
+        <y>230</y>
+        <width>91</width>
+        <height>31</height>
        </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>12</pointsize>
+       </font>
       </property>
       <property name="text">
        <string>Reset</string>
@@ -314,11 +372,16 @@
      <widget class="QPushButton" name="btn_stop_timer">
       <property name="geometry">
        <rect>
-        <x>240</x>
-        <y>210</y>
-        <width>75</width>
-        <height>24</height>
+        <x>220</x>
+        <y>230</y>
+        <width>91</width>
+        <height>31</height>
        </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>12</pointsize>
+       </font>
       </property>
       <property name="text">
        <string>Stop</string>
@@ -327,11 +390,16 @@
      <widget class="QPushButton" name="btn_start_timer">
       <property name="geometry">
        <rect>
-        <x>140</x>
-        <y>210</y>
-        <width>75</width>
-        <height>24</height>
+        <x>120</x>
+        <y>230</y>
+        <width>91</width>
+        <height>31</height>
        </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>12</pointsize>
+       </font>
       </property>
       <property name="text">
        <string>Start</string>
@@ -345,7 +413,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>650</width>
+     <width>610</width>
      <height>22</height>
     </rect>
    </property>
